[package]
name = "ew-auto-import-tool"
version = "0.0.1"
edition = "2021"
description = "自动化完成Vue项目中按需导入组件库的配置工具（Rust版本）"
authors = ["eveningwater"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.6"
colored = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
spinners = "4.1"
fs_extra = "1.3"
regex = "1.10"

[[bin]]
name = "ew-auto-import-tool"
path = "src/main.rs"